Fix z-index value for table header to improve stacking context

--- a/src/components/Home/Projects/Table.css
+++ b/src/components/Home/Projects/Table.css
@@ -31,7 +31,7 @@ table {
 }
 
 th{
-  z-index: 11 !important;
+  z-index: 9 !important;
 }
 
 th,
